# segmentation-web-app

./: README.md  app.py  model.py  pyproject.toml  start.bat
static/: script.js  styles.css
templates/: index.html
