[project]
name = "segmentation-web-app"
version = "0.1.1"
description = ""
authors = [
    {name = "LeoriusMalz",email = "leorius.malz@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask (>=3.0.3,<4.0.0)",
    "numpy (>=1.26.4,<2.3.0)",
    "matplotlib (>=3.9.1,<4.0.0)",
    "opencv-python (>=4.12.0.88,<5.0.0.0)",
    "torch (>=2.7.1,<3.0.0)",
    "torchvision (>=0.22.1,<0.23.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
